2005-10-27  Christian Persch  <chpe@cvs.gnome.org>

	Patch by Robert O'Callahan <rocallahan@novell.com>:

	* configure.ac:

	Allow building with xulrunner.

	* src/main.cpp:

	Abort if RegisterComponents fails.

2005-10-05  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update gecko version check.

2005-08-16  Christian Persch  <chpe@cvs.gnome.org>

	* src/Printer.cpp:
	* src/Printer.h:
	* src/main.cpp:

	Implement --print-background for gnome-web-print (based losely on a
	patch by Steinar H. Gunderson), and fix the case of a relative output
	filename.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/Printer.cpp:

	Use kRangeAllPages here.

2005-08-08  Christian Persch  <chpe@cvs.gnome.org>

	* src/main.cpp:

	Don't load the scrollbar-preventing stylesheet for print mode, since
	it prevents us from printing all pages.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:
	* src/Printer.cpp:
	* src/Printer.h:
	* src/main.cpp:

	Add gnome-web-print to print the page to postscript file.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Disable error pages.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/Components.cpp:
	* src/Components.h:

	Move class definition to .cpp.

2005-08-07  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix for latest firefox trunk.

2005-07-15  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:
	* src/Listener.cpp:
	* src/main.cpp:

	Remove the gross hack with setting/unsetting the env var now
	that https://bugzilla.mozilla.org/show_bug.cgi?id=299681 is
	checked in, and set the pref instead.

2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update gecko configure checks for seamonkey.

2005-07-05  Christian Persch  <chpe@cvs.gnome.org>

	* NEWS:
	* src/Listener.cpp:
	* src/main.cpp:

	Move env var unsetting to the onload handler, since it needs to be
	done on the very first onload, not on the main DOM window's onload.