@@ -54,7 +54,13 @@
 #include <nsIPromptService.h>
 #include <stdio.h>
 
-#define PROMPTER_CLASSNAME	"DummyPrompter"
+#ifdef GNOME_ENABLE_DEBUG
+#define LOG(x) printf (x)
+#else
+#define LOG(x)
+#endif
+
+#define PROMPTER_CLASSNAME	"Dummy Prompt Service"
 #define PROMPTER_CID		{ 0x228965b9, 0x95d5, 0x4ae2, {0xa6, 0x88, 0x6e, 0x1d, 0x34, 0xc7, 0x83, 0xab} }
 
 class Prompter : public nsIPromptService
@@ -74,12 +80,14 @@ NS_IMPL_ISUPPORTS1(Prompter, nsIPromptService)
 /* void alert (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText); */
 NS_IMETHODIMP Prompter::Alert(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText)
 {
+  LOG ("Alert\n");
   return NS_OK;
 }
 
 /* void alertCheck (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, in wstring aCheckMsg, inout boolean aCheckState); */
 NS_IMETHODIMP Prompter::AlertCheck(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, const PRUnichar *aCheckMsg, PRBool *aCheckState)
 {
+  LOG ("AlertCheck\n");
   *aCheckState = PR_FALSE;
   return NS_OK;
 }
@@ -87,6 +95,7 @@ NS_IMETHODIMP Prompter::AlertCheck(nsIDOMWindow *aParent, const PRUnichar *aDial
 /* boolean confirm (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText); */
 NS_IMETHODIMP Prompter::Confirm(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, PRBool *_retval)
 {
+  LOG ("Confirm\n");
   *_retval = PR_FALSE;
   return NS_OK;
 }
@@ -94,6 +103,7 @@ NS_IMETHODIMP Prompter::Confirm(nsIDOMWindow *aParent, const PRUnichar *aDialogT
 /* boolean confirmCheck (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, in wstring aCheckMsg, inout boolean aCheckState); */
 NS_IMETHODIMP Prompter::ConfirmCheck(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, const PRUnichar *aCheckMsg, PRBool *aCheckState, PRBool *_retval)
 {
+  LOG ("ConfirmCheck\n");
   *aCheckState = PR_FALSE;
   *_retval = PR_FALSE;
   return NS_OK;
@@ -102,6 +112,7 @@ NS_IMETHODIMP Prompter::ConfirmCheck(nsIDOMWindow *aParent, const PRUnichar *aDi
 /* PRInt32 confirmEx (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, in unsigned long aButtonFlags, in wstring aButton0Title, in wstring aButton1Title, in wstring aButton2Title, in wstring aCheckMsg, inout boolean aCheckState); */
 NS_IMETHODIMP Prompter::ConfirmEx(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, PRUint32 aButtonFlags, const PRUnichar *aButton0Title, const PRUnichar *aButton1Title, const PRUnichar *aButton2Title, const PRUnichar *aCheckMsg, PRBool *aCheckState, PRInt32 *_retval)
 {
+  LOG ("ConfirmEx\n");
 #define FLAGS (BUTTON_TITLE_CANCEL | BUTTON_TITLE_NO | BUTTON_TITLE_DONT_SAVE)
   *aCheckState = PR_FALSE;
   *_retval = (aButtonFlags & FLAGS) ? 0 :
@@ -114,6 +125,7 @@ NS_IMETHODIMP Prompter::ConfirmEx(nsIDOMWindow *aParent, const PRUnichar *aDialo
 /* boolean prompt (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, inout wstring aValue, in wstring aCheckMsg, inout boolean aCheckState); */
 NS_IMETHODIMP Prompter::Prompt(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, PRUnichar **aValue, const PRUnichar *aCheckMsg, PRBool *aCheckState, PRBool *_retval)
 {
+  LOG ("Prompt\n");
   *aCheckState = PR_FALSE;
   *_retval = PR_FALSE;
   return NS_OK;
@@ -122,6 +134,7 @@ NS_IMETHODIMP Prompter::Prompt(nsIDOMWindow *aParent, const PRUnichar *aDialogTi
 /* boolean promptUsernameAndPassword (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, inout wstring aUsername, inout wstring aPassword, in wstring aCheckMsg, inout boolean aCheckState); */
 NS_IMETHODIMP Prompter::PromptUsernameAndPassword(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, PRUnichar **aUsername, PRUnichar **aPassword, const PRUnichar *aCheckMsg, PRBool *aCheckState, PRBool *_retval)
 {
+  LOG ("PromptUsernameAndPassword\n");
   *aUsername = nsnull;
   *aPassword = nsnull;
   *_retval = PR_FALSE;
@@ -131,6 +144,7 @@ NS_IMETHODIMP Prompter::PromptUsernameAndPassword(nsIDOMWindow *aParent, const P
 /* boolean promptPassword (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, inout wstring aPassword, in wstring aCheckMsg, inout boolean aCheckState); */
 NS_IMETHODIMP Prompter::PromptPassword(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, PRUnichar **aPassword, const PRUnichar *aCheckMsg, PRBool *aCheckState, PRBool *_retval)
 {
+  LOG ("PromptPassword\n");
   *aPassword = nsnull;
   *_retval = PR_FALSE;
   return NS_OK;
@@ -139,14 +153,86 @@ NS_IMETHODIMP Prompter::PromptPassword(nsIDOMWindow *aParent, const PRUnichar *a
 /* boolean select (in nsIDOMWindow aParent, in wstring aDialogTitle, in wstring aText, in PRUint32 aCount, [array, size_is (aCount)] in wstring aSelectList, out long aOutSelection); */
 NS_IMETHODIMP Prompter::Select(nsIDOMWindow *aParent, const PRUnichar *aDialogTitle, const PRUnichar *aText, PRUint32 aCount, const PRUnichar **aSelectList, PRInt32 *aOutSelection, PRBool *_retval)
 {
+  LOG ("Select\n");
   *aOutSelection = 0;
   *_retval = PR_FALSE;
   return NS_OK;
 }
 
+#ifdef HAVE_MOZILLA_PSM
+
+#include <nsIBadCertListener.h>
+
+#define NSSDIALOGS_CLASSNAME "Dummy NSS Dialogs"
+#define NSSDIALOGS_CID { 0x128e643e, 0x8b28, 0x4eea, { 0x8d, 0xe7, 0x22, 0x4f, 0x5a, 0xa0, 0x56, 0x54 } }
+
+class NSSDialogs : public nsIBadCertListener
+{
+  public:
+    NS_DECL_ISUPPORTS
+    NS_DECL_NSIBADCERTLISTENER
+
+    NSSDialogs () { }
+    ~NSSDialogs () { }
+};
+
+NS_IMPL_THREADSAFE_ISUPPORTS1 (NSSDialogs, nsIBadCertListener)
+
+/* boolean confirmUnknownIssuer (in nsIInterfaceRequestor socketInfo, in nsIX509Cert cert, out short certAddType); */
+NS_IMETHODIMP
+NSSDialogs::ConfirmUnknownIssuer(nsIInterfaceRequestor *socketInfo,
+				 nsIX509Cert *cert,
+				 PRInt16 *certAddType,
+				 PRBool *_retval)
+{
+  LOG ("ConfirmUnknownIssuer\n");
+  *certAddType = nsIBadCertListener::ADD_TRUSTED_FOR_SESSION;
+  *_retval = PR_TRUE;
+  return NS_OK;
+}
+
+/* boolean confirmMismatchDomain (in nsIInterfaceRequestor socketInfo, in AUTF8String targetURL, in nsIX509Cert cert); */
+NS_IMETHODIMP
+NSSDialogs::ConfirmMismatchDomain(nsIInterfaceRequestor *socketInfo,
+				  const nsACString & targetURL,
+				  nsIX509Cert *cert,
+				  PRBool *_retval)
+{
+  LOG ("ConfirmMismatchDomain\n");
+  *_retval = PR_TRUE;
+  return NS_OK;
+}
+
+/* boolean confirmCertExpired (in nsIInterfaceRequestor socketInfo, in nsIX509Cert cert); */
+NS_IMETHODIMP
+NSSDialogs::ConfirmCertExpired(nsIInterfaceRequestor *socketInfo,
+			       nsIX509Cert *cert,
+			       PRBool *_retval)
+{
+  LOG ("ConfirmCertExpired\n");
+  *_retval = PR_TRUE;
+  return NS_OK;
+}
+
+/* void notifyCrlNextupdate (in nsIInterfaceRequestor socketInfo, in AUTF8String targetURL, in nsIX509Cert cert); */
+NS_IMETHODIMP
+NSSDialogs::NotifyCrlNextupdate(nsIInterfaceRequestor *socketInfo,
+				const nsACString & targetURL,
+				nsIX509Cert *cert)
+{
+  LOG ("NotifyCrlNextupdate\n");
+  return NS_OK;
+}
+
+#endif /* HAVE_MOZILLA_PSM */
+
 /* -------------------------------------------------------------------------- */
 
 NS_GENERIC_FACTORY_CONSTRUCTOR(Prompter)
+
+#ifdef HAVE_MOZILLA_PSM
+NS_GENERIC_FACTORY_CONSTRUCTOR(NSSDialogs)
+#endif
 
 static const nsModuleComponentInfo sAppComps[] =
 {
@@ -155,7 +241,15 @@ static const nsModuleComponentInfo sAppComps[] =
     PROMPTER_CID,
     NS_PROMPTSERVICE_CONTRACTID,
     PrompterConstructor
-  }
+  },
+#ifdef HAVE_MOZILLA_PSM
+  {
+    NSSDIALOGS_CLASSNAME,
+    NSSDIALOGS_CID,
+    NS_BADCERTLISTENER_CONTRACTID,
+    NSSDialogsConstructor
+  },
+#endif /* HAVE_MOZILLA_PSM */
 };
 
 PRBool
